--- a/lang/en.json
+++ b/lang/en.json
@@ -6,5 +6,7 @@
     "headingLoa": "Level of Achievement",
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
-    "untitled": "Untitled"
+    "untitled": "Untitled",
+	"trend": "Trend",
+	"evidence": "Evidence"
 }
