US106931 -- Use real data for trend graph; languified 'close' tooltip

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -6,5 +6,6 @@
     "headingLoa": "Level of Achievement",
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
-    "untitled": "Untitled"
+    "untitled": "Untitled",
+    "close": "关闭"
 }
