--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,7 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-	"trend": "Trend",
-	"evidence": "Evidence"
+    "trend": "Trend",
+    "evidence": "Evidence",
+    "close": "Close"
 }
