--- a/lang/en.json
+++ b/lang/en.json
@@ -9,5 +9,6 @@
     "untitled": "Untitled",
     "trend": "Trend",
     "evidence": "Evidence",
-    "close": "Close"
+    "close": "Close",
+    "noItemsFound": "No items found."
 }
