--- a/lang/zh.json
+++ b/lang/zh.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "关闭"
+    "close": "关闭",
+    "noItemsFound": "未找到任何项目。"
 }
