--- a/lang/es.json
+++ b/lang/es.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "Cerrar"
+    "close": "Cerrar",
+    "noItemsFound": "No se encontraron elementos."
 }
