--- a/lang/fr.json
+++ b/lang/fr.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "Fermer"
+    "close": "Fermer",
+    "noItemsFound": "Aucun élément trouvé."
 }
