--- a/lang/ko.json
+++ b/lang/ko.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "닫기"
+    "close": "닫기",
+    "noItemsFound": "항목을 찾을 수 없음."
 }
