--- a/lang/nl.json
+++ b/lang/nl.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "Sluiten"
+    "close": "Sluiten",
+    "noItemsFound": "Geen items gevonden."
 }
