--- a/lang/pt.json
+++ b/lang/pt.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "Fechar"
+    "close": "Fechar",
+    "noItemsFound": "Nenhum item encontrado."
 }
