--- a/lang/sv.json
+++ b/lang/sv.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "Stäng"
+    "close": "Stäng",
+    "noItemsFound": "Inga objekt har hittats."
 }
