--- a/lang/tr.json
+++ b/lang/tr.json
@@ -7,5 +7,6 @@
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
-    "close": "Kapat"
+    "close": "Kapat",
+    "noItemsFound": "Hiçbir öğe bulunamadı."
 }
