--- a/lang/es.json
+++ b/lang/es.json
@@ -8,5 +8,5 @@
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
     "close": "Cerrar",
-    "noItemsFound": "No se encontraron elementos."
+    "noEvidence": "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed"
 }
