--- a/lang/ko.json
+++ b/lang/ko.json
@@ -8,5 +8,5 @@
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
     "close": "닫기",
-    "noItemsFound": "항목을 찾을 수 없음."
+    "noEvidence": "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed"
 }
