--- a/lang/ar.json
+++ b/lang/ar.json
@@ -8,5 +8,5 @@
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
     "close": "إغلاق",
-    "noItemsFound": "لم يتم العثور على أي مواد."
+    "noEvidence": "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed"
 }
