--- a/lang/fr.json
+++ b/lang/fr.json
@@ -8,5 +8,5 @@
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
     "close": "Fermer",
-    "noItemsFound": "Aucun élément trouvé."
+    "noEvidence": "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed"
 }
