When outcomes list was empty, would display nothing. Added an empty message

--- a/lang/en.json
+++ b/lang/en.json
@@ -10,5 +10,6 @@
     "trend": "Trend",
     "evidence": "Evidence",
     "close": "Close",
-    "noEvidence": "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed"
+    "noEvidence": "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed",
+    "noOutcomes": "No {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} to report for this user"
 }
