--- a/lang/fr.json
+++ b/lang/fr.json
@@ -11,6 +11,8 @@
     "evidence": "Preuve",
     "close": "Fermer",
     "noEvidence": "Cette {outcome, select, competencies {compétence} expectations {attente} objectives {objectif} outcomes {résultat} standards {norme} other {norme}} n'a pas encore été évaluée",
-    "noOutcomes": "{outcome, select, competencies {Aucune compétence} expectations {Aucune attente} objectives {Aucun objectif} outcomes {Aucun résultat} standards {Aucune norme} other {Aucune norme}} n'a été évaluée.",
-    "noScale": "Aucune échelle n'a été définie pour mesurer l'atteinte des {outcome, select, competencies {compétences} expectations {attentes} objectives {objectifs} outcomes {résultats} standards {normes} other {normes}}."
+    "noOutcomesStudent": "No {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} have been evaluated.",
+    "noOutcomesInstructor": "To start tracking achievement of {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}}, align course {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} to assessed activities.",
+    "noScaleStudent": "No scale has been set to measure achievement of {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}}.",
+    "noScaleInstructor": "To view learner progress towards achieving this {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}}, create and select an achievement scale."
 }
