--- a/lang/fr.json
+++ b/lang/fr.json
@@ -4,6 +4,7 @@
     "headingDate": "Date",
     "headingEvidence": "Nom de la preuve",
     "headingLoa": "Niveau atteint",
+    "miniTrendAttemptsTooltipString": "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
     "miniTrendScreenReaderText": "Évalué {numAssessed} {numAssessed, plural, one {fois} other {fois}}: {levelNames}",
     "notAssessed": "Pas évalué",
     "untitled": "Sans titre",
