--- a/lang/sv.json
+++ b/lang/sv.json
@@ -4,6 +4,7 @@
     "headingDate": "Date",
     "headingEvidence": "Evidence Name",
     "headingLoa": "Level of Achievement",
+    "miniTrendAttemptsTooltipString": "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
     "notAssessed": "Not assessed",
     "untitled": "Untitled",
