--- a/lang/de.json
+++ b/lang/de.json
@@ -6,7 +6,7 @@
    "headingDate" : "Datum",
    "headingEvidence" : "Nachweisname",
    "headingLoa" : "Erreichte Stufe",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Versuch} other {Versuche}} {attemptNames}",
    "miniTrendScreenReaderText" : "Bewertet {numAssessed} {numAssessed, plural, one {Mal} other {Male}}: {levelNames}",
    "noEvidence" : "{outcome, select, competencies {Diese Kompetenz} expectations {Diese Erwartung} objectives {Dieses Ziel} outcomes {Dieses Ergebnis} standards {Dieser Standard} other {Dieser Standard}} wurde noch nicht bewertet",
    "noOutcomesInstructor" : "Um mit dem Nachverfolgen des Erreichens von {outcome, select, competencies {Kompetenzen} expectations {Erwartungen} objectives {Zielen} outcomes {Ergebnissen} standards {Standards} other {Standards}} zu beginnen, müssen Sie {outcome, select, competencies {die Kompetenzen} expectations {die Erwartungen} objectives {die Ziele} outcomes {die Ergebnisse} standards {die Standards} other {die Standards}} des Kurses bewerteten Aktivitäten zuweisen.",
