--- a/lang/ko.json
+++ b/lang/ko.json
@@ -6,7 +6,7 @@
    "headingDate" : "날짜",
    "headingEvidence" : "근거 이름",
    "headingLoa" : "성취 수준",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, 복수, 하나의 {Attempt} 기타 {Attempts}} {attemptNames}",
    "miniTrendScreenReaderText" : "평가된 {numAssigned} {numAssigned, 복수, 하나의 {time} 기타 {times}}:{levelNames}",
    "noEvidence" : "이 {결과, 선택, 역량 {competency} 기대 {expectation} 목표 {objective} 결과 {outcome} 표준 {standard} 기타 {standard}}은(는) 아직 평가되지 않았습니다.",
    "noOutcomesInstructor" : "{결과, 선택, 역량 {competencies} 기대 {expectations} 목표 {objectives} 결과 {outcomes} 표준 {standards} 기타 {standards}}의 추적 도전과제를 시작하려면, 과정 {결과, 선택, 역량 {competencies} 기대 {expectations} 목표 {objectives} 결과 {outcomes} 표준 {standards} 기타 {standards}}을(를) 평가된 활동에 정렬합니다.",
