--- a/lang/ja.json
+++ b/lang/ja.json
@@ -6,7 +6,7 @@
    "headingDate" : "日付",
    "headingEvidence" : "証明の名前",
    "headingLoa" : "達成レベル",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {回の試行} other {回の試行}} {attemptNames}",
    "miniTrendScreenReaderText" : "{numAssessed} {numAssessed, plural, one {回} other {回}}評価済み: {levelNames}",
    "noEvidence" : "この{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}} は、まだ評価されていません",
    "noOutcomesInstructor" : "{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}} の達成の追跡を開始するには、コースの {outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}}と評価済みアクティビティの整合を行います。",
