--- a/lang/nl.json
+++ b/lang/nl.json
@@ -6,7 +6,7 @@
    "headingDate" : "Datum",
    "headingEvidence" : "Naam bewijs",
    "headingLoa" : "Niveau van de resultaten",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Poging} other {Pogingen}} {attemptNames}",
    "miniTrendScreenReaderText" : "Beoordeeld {numAssessed} {numAssessed, plural, one {time} other {times}}: {levelNames}",
    "noEvidence" : "Deze {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} zijn nog niet beoordeeld",
    "noOutcomesInstructor" : "Om te beginnen met het volgen van de resultaten van {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}}, pas {outcome, select, competencies {Competenties} expectations {Verwachtingen} objectives {Doelstellingen} outcomes {Resultaten} standards {Standaarden} other {Standaarden}} van cursus aan de beoordeelde activiteiten aan.",
