--- a/lang/tr.json
+++ b/lang/tr.json
@@ -6,7 +6,7 @@
    "headingDate" : "Tarih",
    "headingEvidence" : "Kanıt Adı",
    "headingLoa" : "Başarı Seviyesi",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Deneme} other {Deneme}} {attemptNames}",
    "miniTrendScreenReaderText" : "{numAssessed} {numAssessed, plural, one {kez} other {kez}} değerlendirildi: {levelNames}",
    "noEvidence" : "Bu {outcome, select, competencies {yeterlilik} expectations {beklenti} objectives {hedef} outcomes {kazanım} standards {standart} other {standart}} henüz değerlendirilmedi",
    "noOutcomesInstructor" : "{outcome, select, competencies {yeterlilikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} başarısını takip etmeye başlamak için, dersi {outcome, select, competencies {yeterlikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} değerlendirilen etkinliklere hizalayın.",
