--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -6,7 +6,7 @@
    "headingDate" : "日期",
    "headingEvidence" : "證明名稱",
    "headingLoa" : "達成層級",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {次嘗試} other {次嘗試}} {attemptNames}",
    "miniTrendScreenReaderText" : "已評量 {numAssessed} {numAssessed, plural, one {次} other {次}}：{levelNames}",
    "noEvidence" : "此 {outcome, select, competencies {能力} expectations {預期} objectives {目標} outcomes {成果} standards {標準} other {標準}} 未經評量",
    "noOutcomesInstructor" : "若要開始追蹤 {outcome, select, competencies {能力} expectations {預期} objectives {目標} outcomes {成果} standards {標準} other {標準}} 的達成，請將課程 {outcome, select, competencies {能力} expectations {預期} objectives {目標} outcomes {成果} standards {標準} other {標準}} 對齊至已評量活動。",
