--- a/lang/zh.json
+++ b/lang/zh.json
@@ -6,7 +6,7 @@
    "headingDate" : "日期",
    "headingEvidence" : "证明名称",
    "headingLoa" : "已达到的级别",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, one {次尝试} other {次尝试}} {attemptNames}",
    "miniTrendScreenReaderText" : "已评估 {numAssessed} {numAssessed, plural, one {次} other {次}}：{levelNames}",
    "noEvidence" : "该 {outcome, select, competencies {能力} expectations {预期} objectives {目标} outcomes {成果} standards {标准} other {标准}} 仍未被评估",
    "noOutcomesInstructor" : "要开始追踪 {outcome, select, competencies {能力} expectations {预期} objectives {目标} outcomes {成果} standards {标准} other {标准}} 的成绩，请将课程 {outcome, select, competencies {能力} expectations {预期} objectives {目标} outcomes {成果} standards {标准} other {标准}} 与评估活动对齐。",
