Revert broken translations and fix lang errors

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,15 +1,15 @@
 {
-    "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, one {Attempt {أسماء المحاولات}} other {Attempts {أسماء المحاولات} و{اسم المحاولة الأخيرة}}}",
-    "bigTrendAttemptsTooltipString": "{numAttempts, plural, one {محاولة} other { من المحاولات}} {attemptNames}",
+    "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {Attempt {attemptNames}} other {Attempts {attemptNames} and {lastAttemptName}}}",
+    "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {محاولة} other { من المحاولات}} {attemptNames}",
     "close": "إغلاق",
     "evidence": "دليل",
     "headingDate": "التاريخ",
     "headingEvidence": "اسم الدليل",
     "headingLoa": "مستوى التحصيل",
-    "miniTrendAttemptsTooltipString": "{numAttempts, plural, one {محاولة} other { من المحاولات}} {attemptNames}",
-    "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, one {مرة} other {من المرات}}: {levelNames}",
-    "noEvidence": "لم يتم تقييم {outcome،‏ select،‏ competencies {الكفاءة} expectations {التوقع} objectives {الهدف} outcomes {النتيجة} standards {المعيار} other {المعيار}} هذا بعد",
-    "noOutcomesInstructor": "لبدء تعقّب تحصيل {outcome،‏ select،‏ competencies {الكفاءات} expectations {التوقعات} objectives {الأهداف} outcomes {النتائج} standards {المعايير} other {المعايير}}، يجب محاذاة {outcome،‏ select،‏ competencies {الكفاءات} expectations {التوقعات} objectives {الأهداف} outcomes {النتائج} standards {المعايير} other {المعايير}} الخاصة بالمقرر التعليمي مع الأنشطة التي تم تقييمها.",
+    "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {محاولة} other { من المحاولات}} {attemptNames}",
+    "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, =1 {مرة} other {من المرات}}: {levelNames}",
+    "noEvidence": "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed",
+    "noOutcomesInstructor": "To start tracking achievement of {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}}, align course {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} to assessed activities.",
     "noOutcomesStudent": "لم يتم تقييم أي {outcome, select, competencies {كفاءات} expectations {توقعات} objectives {أهداف} outcomes {نتائج} standards {معايير} other {معايير}}.",
     "noScaleInstructor": "لعرض تقدم المتعلّم لتحقيق {outcome, select, competencies {الكفاءة} expectations {التوقع} objectives {الهدف} outcomes {النتيجة} standards {المعيار} other {المعيار}} هذا، يجب إنشاء مقياس تحصيل وتحديده.",
     "noScaleStudent": "لم يتم تعيين أي مقياس لقياس تحقيق {outcome, select, competencies {الكفاءات} expectations {التوقعات} objectives {الأهداف} outcomes {النتائج} standards {المعايير} other {المعايير}}.",
