--- a/lang/es.json
+++ b/lang/es.json
@@ -1,13 +1,13 @@
 {
-    "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, one {Intento {attemptNames}} other {Intentos {attemptNames} and {lastAttemptName}}}",
-    "bigTrendAttemptsTooltipString": "{numAttempts, plural, one {Intento} other {Intentos}} {attemptNames}",
+    "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {Intento {attemptNames}} other {Intentos {attemptNames} and {lastAttemptName}}}",
+    "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Intento} other {Intentos}} {attemptNames}",
     "close": "Cerrar",
     "evidence": "Prueba",
     "headingDate": "Fecha",
     "headingEvidence": "Nombre de la prueba",
     "headingLoa": "Nivel de logro",
-    "miniTrendAttemptsTooltipString": "{numAttempts, plural, one {Intento} other {Intentos}} {attemptNames}",
-    "miniTrendScreenReaderText": "{numAssessed} {numAssessed, plural, one {hora} other {horas}} evaluados: {levelNames}",
+    "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Intento} other {Intentos}} {attemptNames}",
+    "miniTrendScreenReaderText": "{numAssessed} {numAssessed, plural, =1 {hora} other {horas}} evaluados: {levelNames}",
     "noEvidence": "Este {outcome, select, competencies {competencia} expectations {expectativa} objectives {objetivo} outcomes {resultado} standards {estándar} other {estándar}} aún no se ha evaluado",
     "noOutcomesInstructor": "Para comenzar a realizar el seguimiento del logro de {outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}}, debe alinear el curso {outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}} con las actividades evaluadas.",
     "noOutcomesStudent": "{outcome, select, competencies {competencias} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {estándares} other {estándares}} no se han evaluado.",
