--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,13 +1,13 @@
 {
-    "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, one {Deneme {attemptNames}} other {Deneme {attemptNames} and {lastAttemptName}}}",
-    "bigTrendAttemptsTooltipString": "{numAttempts, plural, one {Deneme} other {Deneme}} {attemptNames}",
+    "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {Deneme {attemptNames}} other {Deneme {attemptNames} and {lastAttemptName}}}",
+    "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Deneme} other {Deneme}} {attemptNames}",
     "close": "Kapat",
     "evidence": "Kanıt",
     "headingDate": "Tarih",
     "headingEvidence": "Kanıt Adı",
     "headingLoa": "Başarı Seviyesi",
-    "miniTrendAttemptsTooltipString": "{numAttempts, plural, one {Deneme} other {Deneme}} {attemptNames}",
-    "miniTrendScreenReaderText": "{numAssessed} {numAssessed, plural, one {kez} other {kez}} değerlendirildi: {levelNames}",
+    "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Deneme} other {Deneme}} {attemptNames}",
+    "miniTrendScreenReaderText": "{numAssessed} {numAssessed, plural, =1 {kez} other {kez}} değerlendirildi: {levelNames}",
     "noEvidence": "Bu {outcome, select, competencies {yeterlilik} expectations {beklenti} objectives {hedef} outcomes {kazanım} standards {standart} other {standart}} henüz değerlendirilmedi",
     "noOutcomesInstructor": "{outcome, select, competencies {yeterlilikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} başarısını takip etmeye başlamak için, dersi {outcome, select, competencies {yeterlikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} değerlendirilen etkinliklere hizalayın.",
     "noOutcomesStudent": "{outcome, select, competencies {yeterlilikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} değerlendirilmedi.",
