Apply suggestions from code review

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -1,13 +1,13 @@
 {
    "bigTrendAttemptsScreenReaderString" : "{numAttempts, plural, =1 {Attempt {attemptNames}} other {Attempts {attemptNames} 및 {lastAttemptName}}}",
-   "bigTrendAttemptsTooltipString" : "{numAttempts, plural, =1 {Attempt} 기타 {Attempts}} {attemptNames}",
+   "bigTrendAttemptsTooltipString" : "{numAttempts, plural, =1 {Attempt} other {Attempts}} {attemptNames}",
    "close" : "닫기",
    "evidence" : "근거",
    "headingDate" : "날짜",
    "headingEvidence" : "근거 이름",
    "headingLoa" : "성취 수준",
-   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, =1 {Attempt} 기타 {Attempts}} {attemptNames}",
-   "miniTrendScreenReaderText" : "평가됨 {numAssessed} {numAssessed, plural, =1 {time} 기타 {times}}: {levelNames}",
+   "miniTrendAttemptsTooltipString" : "{numAttempts, plural, =1 {Attempt} other {Attempts}} {attemptNames}",
+   "miniTrendScreenReaderText" : "평가됨 {numAssessed} {numAssessed, plural, =1 {time} other {times}}: {levelNames}",
    "noEvidence" : "This {outcome, select, competencies {competency} expectations {expectation} objectives {objective} outcomes {outcome} standards {standard} other {standard}} has not yet been assessed",
    "noOutcomesInstructor" : "To start tracking achievement of {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}}, align course {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} to assessed activities.",
    "noOutcomesStudent" : "No {outcome, select, competencies {competencies} expectations {expectations} objectives {objectives} outcomes {outcomes} standards {standards} other {standards}} have been evaluated.",
