Search lang fixes

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -16,7 +16,9 @@
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "未評価",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
+    "searchCleared": "Search results cleared",
     "searchHint": "search...",
+    "searchLabel": "Search",
     "trend": "傾向",
     "untitled": "無題"
 }
