--- a/lang/de.json
+++ b/lang/de.json
@@ -16,7 +16,9 @@
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "Nicht bewertet",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
+    "searchCleared": "Search results cleared",
     "searchHint": "search...",
+    "searchLabel": "Search",
     "trend": "Trend",
     "untitled": "Ohne Titel"
 }
