--- a/lang/es.json
+++ b/lang/es.json
@@ -16,7 +16,9 @@
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "Sin evaluación",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
+    "searchCleared": "Search results cleared",
     "searchHint": "search...",
+    "searchLabel": "Search",
     "trend": "Tendencia",
     "untitled": "Sin título"
 }
