--- a/lang/fr.json
+++ b/lang/fr.json
@@ -16,7 +16,9 @@
     "noSearchResults": "No results found for {searchTerm}",
     "notAssessed": "Non évalué",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
+    "searchCleared": "Search results cleared",
     "searchHint": "search...",
+    "searchLabel": "Search",
     "trend": "Tendance",
     "untitled": "Sans titre"
 }
