--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -16,7 +16,9 @@
     "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "未評量",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
+    "searchCleared": "Search results cleared",
     "searchHint": "search...",
+    "searchLabel": "Search",
     "trend": "趨勢",
     "untitled": "未命名"
 }
