--- a/lang/en.json
+++ b/lang/en.json
@@ -19,6 +19,6 @@
     "searchCleared": "Search results cleared",
     "searchHint": "search...",
     "searchLabel": "Search",
-    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
-    "noSearchResults": "No results found for \"{searchTerm}\""
+    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"@{searchTerm}@\"",
+    "noSearchResults": "No results found for \"@{searchTerm}@\""
 }
