--- a/lang/tr.json
+++ b/lang/tr.json
@@ -13,9 +13,9 @@
     "noOutcomesStudent": "{outcome, select, competencies {yeterlilikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} değerlendirilmedi.",
     "noScaleInstructor": "Şunlara ulaşma konusundaki katılımcı ilerlemesini görmek için, bir başarı ölçütü oluşturun ve seçin: {outcome, select, competencies {yeterlik} expectations {beklenti} objectives {hedef} outcomes {kazanım} standards {standart} other {standart}}.",
     "noScaleStudent": "{outcome, select, competencies {yeterlikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} başarısı için bir ölçüt belirlenmedi.",
-    "noSearchResults": "No results found for \"{searchTerm}\"",
+    "noSearchResults": "No results found for \"@{searchTerm}@\"",
     "notAssessed": "Değerlendirilmemiş",
-    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
+    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"@{searchTerm}@\"",
     "searchCleared": "Search results cleared",
     "searchHint": "search...",
     "searchLabel": "Search",
