--- a/lang/sv.json
+++ b/lang/sv.json
@@ -13,9 +13,9 @@
     "noOutcomesStudent": "Inga {outcome, select, competencies {kompetenser} expectations {förväntningar} objectives {mål} outcomes {resultat} standards {standarder} other {standarder}} har utvärderats.",
     "noScaleInstructor": "För att se elevens framsteg mot dessa {outcome, select, competencies {kompetenser} expectations {förväntningar} objectives {mål} outcomes {resultat} standards {standarder} other {standarder}} skapar du och väljer en nivåskala.",
     "noScaleStudent": "Ingen skala har angetts för mätning av uppnådda {outcome, select, competencies {kompetenser} expectations {förväntningar} objectives {mål} outcomes {resultat} standards {standarder} other {standarder}}.",
-    "noSearchResults": "No results found for \"@{searchTerm}@\"",
+    "noSearchResults": "No results found for \"{searchTerm}\"",
     "notAssessed": "Ej bedömt",
-    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"@{searchTerm}@\"",
+    "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
     "searchHint": "search...",
     "searchLabel": "Search",
