SR notify on expand/collapse

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {محاولة واحدة {attemptNames}} other {من المحاولات {attemptNames} و{lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {محاولة واحدة} other {من المحاولات}} {attemptNames}",
     "close": "إغلاق",
@@ -17,7 +19,7 @@
     "notAssessed": "لم يتم التقييم",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "الاتجاه",
     "untitled": "بلا عنوان"
