--- a/lang/de.json
+++ b/lang/de.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {Versuch {attemptNames}} other {Versuche {attemptNames} und {lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Versuch} other {Versuche}} {attemptNames}",
     "close": "Schließen",
@@ -17,7 +19,7 @@
     "notAssessed": "Nicht bewertet",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "Trend",
     "untitled": "Ohne Titel"
