--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {Tentative {attemptNames}} other {Tentatives {attemptNames} et {lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Tentative} other {Tentatives}} {attemptNames}",
     "close": "Fermer",
@@ -17,7 +19,7 @@
     "notAssessed": "Non évalué",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "Tendance",
     "untitled": "Sans titre"
