--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {試行 {attemptNames}} other {試行 {attemptNames} と {lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {回の試行} other {回の試行}} {attemptNames}",
     "close": "閉じる",
@@ -17,7 +19,7 @@
     "notAssessed": "未評価",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "傾向",
     "untitled": "無題"
