--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {Tentativa {attemptNames}} other {Tentativas {attemptNames} e {lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Tentativa} other {Tentativas}} {attemptNames}",
     "close": "Fechar",
@@ -17,7 +19,7 @@
     "notAssessed": "Não avaliado",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "Tendência",
     "untitled": "Sem Título"
