--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {次嘗試 {attemptNames}} other {次嘗試 {attemptNames} 與 {lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {次嘗試} other {次嘗試}} {attemptNames}",
     "close": "關閉",
@@ -17,7 +19,7 @@
     "notAssessed": "未評量",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "趨勢",
     "untitled": "未命名"
