--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {次尝试 {attemptNames}} other {次尝试 {attemptNames} and {lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {次尝试} other {次尝试}} {attemptNames}",
     "close": "关闭",
@@ -17,7 +19,7 @@
     "notAssessed": "未评估",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "趋势",
     "untitled": "无标题"
