--- a/lang/sv.json
+++ b/lang/sv.json
@@ -1,4 +1,6 @@
 {
+    "a11yCollapsed": "collapsed",
+    "a11yExpanded": "expanded",
     "bigTrendAttemptsScreenReaderString": "{numAttempts, plural, =1 {försök {attemptNames}} other {försök {attemptNames} and {lastAttemptName}}}",
     "bigTrendAttemptsTooltipString": "{numAttempts, plural, =1 {försök} other {försök}} {attemptNames}",
     "close": "Stäng",
@@ -17,7 +19,7 @@
     "notAssessed": "Ej bedömt",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"{searchTerm}\"",
     "searchCleared": "Search results cleared",
-    "searchHint": "search...",
+    "searchHint": "Search...",
     "searchLabel": "Search",
     "trend": "Trend",
     "untitled": "Namnlös"
