--- a/lang/pt.json
+++ b/lang/pt.json
@@ -10,6 +10,9 @@
     "headingLoa": "Nível de Realização",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Tentativa} other {Tentativas}} {attemptNames}",
     "miniTrendScreenReaderText": "Usuário avaliado {numAssessed} {numAssessed, plural, =1 {vez} other {vezes}}: {levelNames}",
+    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
+    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
+    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
     "noEvidence": "Este(a) {outcome, select, competencies {competência} expectations {expectativa} objectives {objetivo} outcomes {resultado} standards {padrão} other {padrão}} ainda não foi avaliado(a)",
     "noOutcomesInstructor": "Para começar a acompanhar a realização dos(as) {outcome, select, competencies {competências} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {padrões} other {padrões}}, alinhe os(as) {outcome, select, competencies {competências} expectations {expectativas} objectives {objetivos} outcomes {resultados} standards {padrões} other {padrões}} do curso para as atividades avaliadas.",
     "noOutcomesStudent": "Nenhum(a) {outcome, select, competencies {competência} expectations {expectativa} objectives {objetivo} outcomes {resultado} standards {padrão} other {padrão}} foi avaliado(a).",
