--- a/lang/tr.json
+++ b/lang/tr.json
@@ -10,6 +10,9 @@
     "headingLoa": "Başarı Seviyesi",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {Deneme} other {Deneme}} {attemptNames}",
     "miniTrendScreenReaderText": "Assessed {numAssessed} {numAssessed, plural, =1 {kez} other {kez}}: {levelNames}",
+    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
+    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
+    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
     "noEvidence": "Bu {outcome, select, competencies {yeterlilik} expectations {beklenti} objectives {hedef} outcomes {kazanım} standards {standart} other {standart}} henüz değerlendirilmedi",
     "noOutcomesInstructor": "{outcome, select, competencies {yeterlilikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} başarısını takip etmeye başlamak için, dersi {outcome, select, competencies {yeterlikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} değerlendirilen etkinliklere hizalayın.",
     "noOutcomesStudent": "{outcome, select, competencies {yeterlilikler} expectations {beklentiler} objectives {hedefler} outcomes {kazanımlar} standards {standartlar} other {standartlar}} değerlendirilmedi.",
