--- a/lang/ja.json
+++ b/lang/ja.json
@@ -10,6 +10,9 @@
     "headingLoa": "達成レベル",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {回の試行} other {回の試行}} {attemptNames}",
     "miniTrendScreenReaderText": "{numAssessed} {numAssessed, plural, =1 {回} other {回}}評価済み: {levelNames}",
+    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
+    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
+    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
     "noEvidence": "この{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}} は、まだ評価されていません",
     "noOutcomesInstructor": "{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}} の達成の追跡を開始するには、コースの {outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}}と評価済みアクティビティの整合を行います。",
     "noOutcomesStudent": "評価した{outcome, select, competencies {コンピテンシ} expectations {期待} objectives {目的} outcomes {結果} standards {標準} other {標準}}はありません。",
