--- a/lang/sv.json
+++ b/lang/sv.json
@@ -10,6 +10,9 @@
     "headingLoa": "Uppnådd nivå",
     "miniTrendAttemptsTooltipString": "{numAttempts, plural, =1 {försök} other {försök}} {attemptNames}",
     "miniTrendScreenReaderText": "Utvärderade {numAssessed} {numAssessed, plural, =1 {gång} other {gånger}}: {levelNames}",
+    "nodeAriaText": "Level {level}, group {state}, {content}, {position} of {count}.",
+    "nodeAriaTextLeaf": "Level {level}, {content}, {position} of {count}.",
+    "nodeLoadingAriaText": "Level {level}, loading, {position} of {count}.",
     "noEvidence": "De här {outcome, select, competencies {kompetenserna} expectations {förväntningarna} objectives {målen} outcomes {resultaten} standards {standarderna} other {standarderna}} har inte utvärderats än",
     "noOutcomesInstructor": "För att börja spåra uppnådda {outcome, select, competencies {kompetenser} expectations {förväntningar} objectives {mål} outcomes {resultat} standards {standarder} other {standarder}} justerar du kursens {outcome, select, competencies {kompetenser} expectations {förväntningar} objectives {mål} outcomes {resultat} standards {standarder} other {standarder}} mot utvärderade aktiviteter.",
     "noOutcomesStudent": "Inga {outcome, select, competencies {kompetenser} expectations {förväntningar} objectives {mål} outcomes {resultat} standards {standarder} other {standarder}} har utvärderats.",
