Add aria description and notify when loaded

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -16,6 +16,9 @@
     "noSearchResults": "No results found for \"@{searchTerm}@\"",
     "notAssessed": "لم يتم التقييم",
     "numSearchResults": "{numResults} search {numResults, plural, =1 {result} other {results}} for \"@{searchTerm}@\"",
+    "outcomesListDescription": "{outcome, select, competencies {Competencies} expectations {Expectations} objectives {Objectives} outcomes {Outcomes} standards {Standards} other {Standards}} List",
+    "outcomesListLoading": "Loading",
+    "outcomesListLoadingComplete": "Loading complete",
     "searchCleared": "Search results cleared",
     "searchHint": "search...",
     "searchLabel": "Search",
